set up simple menu

--- a/config/font.cfg
+++ b/config/font.cfg
@@ -6,8 +6,8 @@ font: fonts/AmaticSC-Regular.ttf
 size: 14
 tag: small
 
-font: fonts/AmaticSC-Regular.ttf
-size: 48
+font: fonts/Xenogears_font.ttf
+size: 16
 tag: H1
 
 font: fonts/AmaticSC-Regular.ttf
