--- a/config/input.cfg
+++ b/config/input.cfg
@@ -3,7 +3,7 @@
     [
         {
             "command":"exit",
-            "keys":["F4"]
+            "keys":["m"]
         },
         {
             "command":"ok",
